# yaml-tftpl-lsp

./: .releaserc.json  CHANGELOG.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
src/: backend.rs  document.rs  lib.rs  main.rs
src/diagnostics/: mod.rs  workflow_validator.rs  yaml_errors.rs
src/parser/: expressions.rs  mod.rs  preprocessor.rs  yaml.rs
src/schema/: mod.rs  workflows.rs
tests/: integration_tests.rs
tests/fixtures/edge_cases/: mixed_expressions.yaml.tftpl  multiline_expression.yaml.tftpl  nested_expressions.yaml.tftpl
tests/fixtures/invalid/: bad_indentation.yaml.tftpl  missing_colon.yaml.tftpl  unclosed_brace.yaml.tftpl  unclosed_quote.yaml.tftpl
tests/fixtures/valid/: workflow.yaml.tftpl
