[package]
name = "yaml-tftpl-lsp"
version = "1.0.1"
edition = "2021"
description = "LSP for YAML Terraform template files with GCP Workflows syntax"
license = "MIT"
repository = "https://github.com/anomalyco/yaml-tftpl-lsp"

[dependencies]
# LSP implementation
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Expression parsing
regex = "1"
lazy_static = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
assert_matches = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
